tests/baselines/reference/objectTypesIdentityWithPrivates2.errors.txt
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(22,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(23,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(29,1): error TS2463: Duplicate overload signature for foo5.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(30,1): error TS2463: Duplicate overload signature for foo5.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(33,1): error TS2463: Duplicate overload signature for foo6.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts(34,1): error TS2463: Duplicate overload signature for foo6.


==== tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates2.ts (6 errors) ====
    // object types are identical structurally
    
    class C<T> {
        private foo: T;
    }
    
    class D<T> extends C<T> {
    }
    
    function foo1(x: C<string>);
    function foo1(x: C<number>); // ok
    function foo1(x: any) { }
    
    function foo2(x: D<string>);
    function foo2(x: D<number>); // ok
    function foo2(x: any) { }
    
    function foo3(x: C<string>);
    function foo3(x: D<number>); // ok
    function foo3(x: any) { }
    
    function foo4(x: C<number>): number; 
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: D<number>): string; // BUG 831926
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: any): any { }
    
    var r = foo4(new C<number>());
    var r = foo4(new D<number>());
    
    function foo5(x: C<number>): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5.
    function foo5(x: C<number>): string; // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5.
    function foo5(x: any): any { }
    
    function foo6(x: D<number>): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: D<number>): string; // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: any): any { }
    
    
    